webroot/css/style.css
@font-face {
    font-family: "Bebas Neue";
    src: url('../fonts/bebasneue-subset.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "Monstserrat Regular";
    src: url('../fonts/montserrat-regular-subset.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "Brandon Grotesque";
    src: url('../fonts/brandon_grotesque.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Open Sans';
    font-style: italic;
    font-weight: 300;
    src: local('Open Sans Light Italic'), local('OpenSans-LightItalic'), url(https://fonts.gstatic.com/s/opensans/v15/memnYaGs126MiZpBA-UFUKWyV9hlIqY.ttf) format('truetype');
  }
  @font-face {
    font-family: 'Open Sans';
    font-style: italic;
    font-weight: 400;
    src: local('Open Sans Italic'), local('OpenSans-Italic'), url(https://fonts.gstatic.com/s/opensans/v15/mem6YaGs126MiZpBA-UFUK0Xdcg.ttf) format('truetype');
  }
  @font-face {
    font-family: 'Open Sans';
    font-style: italic;
    font-weight: 600;
    src: local('Open Sans SemiBold Italic'), local('OpenSans-SemiBoldItalic'), url(https://fonts.gstatic.com/s/opensans/v15/memnYaGs126MiZpBA-UFUKXGUdhlIqY.ttf) format('truetype');
  }
  @font-face {
    font-family: 'Open Sans';
    font-style: italic;
    font-weight: 700;
    src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url(https://fonts.gstatic.com/s/opensans/v15/memnYaGs126MiZpBA-UFUKWiUNhlIqY.ttf) format('truetype');
  }
  @font-face {
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 300;
    src: local('Open Sans Light'), local('OpenSans-Light'), url(https://fonts.gstatic.com/s/opensans/v15/mem5YaGs126MiZpBA-UN_r8OXOhs.ttf) format('truetype');
  }
  @font-face {
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 400;
    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v15/mem8YaGs126MiZpBA-UFW50e.ttf) format('truetype');
  }
  @font-face {
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 600;
    src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'), url(https://fonts.gstatic.com/s/opensans/v15/mem5YaGs126MiZpBA-UNirkOXOhs.ttf) format('truetype');
  }
  @font-face {
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 700;
    src: local('Open Sans Bold'), local('OpenSans-Bold'), url(https://fonts.gstatic.com/s/opensans/v15/mem5YaGs126MiZpBA-UN7rgOXOhs.ttf) format('truetype');
  }
  @font-face {
    font-family: 'Varela Round';
    font-style: normal;
    font-weight: 400;
    src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(https://fonts.gstatic.com/s/varelaround/v9/w8gdH283Tvk__Lua32TysjIfqcuK.ttf) format('truetype');
  }

.gl-red-header-bg {
    background-color: #a5252d;
    background-image: url("../img/background-diamond.png");
    background-repeat: repeat-x;
    background-size: contain;
}

.header-image {
    width: 5vw;
    height: auto;
}



.gl-page-header-text-mobile {
    font-size: 3rem;
    color: #a5252d;
}

.gl-page-header-text-mobile::after, .gl-page-header-text-mobile-lesser::after {
    background-color: #cdc0c1;
    background: #333;
    display: block;
    height: 1px;
    margin: 10px 10px;
    position: relative;
    width: 80px;
    zoom: 1;
    content: " ";
}

.gl-page-header-text-mobile-lesser {
    font-size: 2rem;
    color: #a5252d;
}


.gl-page-header-text {
    font-size: 3rem;
    color: #a5252d;
    white-space: nowrap;
}

.gl-page-header-text::before {
    background-color: #cdc0c1;
    background: #333;
    right: 80%;
    content: " ";
    display: inline-block;
    height: 1px;
    margin: 0 10px;
    position: absolute;
    top: 50%;
    width: 20%;
    zoom: 1;
}

.gl-page-header-text::after {
    background-color: #cdc0c1;
    background: #333;
    left: 80%;
    content: " ";
    display: inline-block;
    height: 1px;
    margin: 0 10px;
    position: absolute;
    top: 50%;
    width: 20%;
    zoom: 1;
}


.bg-light {
    background-color: #FFFFFF !important;
}

h1, h2, h3, h4 {
    letter-spacing: normal;
    font-weight: normal;
    border: none;
    padding: initial;
    letter-spacing: initial;
    margin-bottom: initial;
    line-height: initial;
    background: initial;
    font-family: "Bebas Neue", bebas, helvetica, sans-serif !important;
    text-transform: uppercase;
}

.gl-hamburger, .show>.btn-secondary.dropdown-toggle, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle, .btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary:hover, .show>.btn-secondary.dropdown-toggle:focus {
    fill: #a5252d;
    background-color: #a5252d;
    border-color: #a5252d;
    box-shadow: none;
}

.gl-red {
    background-color: #a5252d;
}

.gl-offwhite {
    background-color: #f8ecd2;
}

.gl-nav-borders {
    border-bottom: 10px solid #a5252d;
}

.gl-button-link-mobile {
    color: #FFFFFF;
    border-radius: 3px;
    background-color: #a5252d;
    font-family: "open sans", bebas, helvetica, sans-serif !important;
    padding-right: 0px !important;
    margin-right: 0px !important;
    padding-left: 0px !important;
    margin-left: 0px !important;
    font-size: 0.75rem;
    text-transform: uppercase;
    border: none !important;
    font-weight: 600;
    white-space: nowrap;
    width: 100%;
}


.gl-navlink ,.gl-button-link-desktop {
    color: #FFFFFF;
    border-radius: 3px;
    background-color: #a5252d;
    font-family: "open sans", bebas, helvetica, sans-serif !important;
    padding-right: 0px !important;
    margin-right: 0px !important;
    padding-left: 0px !important;
    margin-left: 0px !important;
    font-size: 0.75rem;
    text-transform: uppercase;
    border: none !important;
    font-weight: 600;
    white-space: nowrap;
    width: 33%;
    max-width: 200px;
}

.gl-button-link-desktop, .gl-button-link-mobile, .gl-button-link-inverse, .gl-button-link-black {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

.gl-button-link-inverse {
    color: #FFFFFF;
    border-radius: 6px;
    /* background-color: #FFFFFF; */
    font-family: "Bebas Neue", bebas, helvetica, sans-serif !important;
    padding-right: 0.5rem !important;
    margin-right: 1.5rem !important;
    padding-top: 0.5rem !important;
    margin-top: 1.5rem !important;
    padding-left: 0.5rem !important;
    margin-left: 1.5rem !important;
    padding-bottom: 0.5rem !important;
    margin-bottom: 1.5rem !important;
    font-size: 30px;
    border: 2px solid #FFFFFF
}

.gl-button-link-black {
    color: #000000;
    font-weight: 100;
    border-radius: 0px;
    /* background-color: #FFFFFF; */
    padding-right: 0.5rem !important;
    margin-right: 1.5rem !important;
    padding-top: 0.5rem !important;
    margin-top: 1.5rem !important;
    padding-left: 0.5rem !important;
    margin-left: 1.5rem !important;
    padding-bottom: 0.5rem !important;
    margin-bottom: 1.5rem !important;
    font-size: 25px;
    border: 1px solid #000000;
    font-family: "open sans", helvetica, sans-serif;
    text-transform: uppercase;
}



.gl-navlink:hover, .gl-button-link:hover {
    color: #FFFFFF;
    text-decoration: none;
}

.gl-button-link-inverse:hover {
    color: #FFFFFF;
    text-decoration: none;
}

.gl-button-link-black:hover {
    color: #000000;
    text-decoration: none;
}

.gl-font-1 {
    font-family: "Bebas Neue", bebas, helvetica, sans-serif !important;
}

.gl-font-2 {
    font-family: "Monstserrat Regular", helvetica, sans-serif !important;
}

.gl-font-3 {
    font-family: "Brandon Grotesque", helvetica, sans-serif !important;
}

.gl-font-4 {
    font-family: "Open Sans", helvetica, sans-serif !important;
}

.justified {
    text-align: justify;
}

.italic {
    font-style: italic;
}

.red-font {
    color: #a5252d;
}

.gl-big-body-text {
    font-size: 40px;
}

.gl-small-body-text {
    font-size: 25px;
}

.right-justify {
    text-align: right;
}

.fit-width {
    width: 100%;
    height: auto;
    padding: 0;
}

.headliner-text-bold {
    font-weight: bold;
    font-size: 25px;
    text-align: justify;
}

.headliner-text {
    font-weight: normal;
    font-size: 20px;
    text-align: justify;
}

.row {
    margin-left: 0;
    margin-right: 0;
}

.headliner-row {
    padding-bottom: 5%;
    border-bottom: 3px solid;
    border-bottom-color: black;
}

.container.row{
    margin-left: -15px;
    margin-right: -15px;
}

.text-on-image {
    position: absolute;
    top: 33%;
    left: 10%;
    text-align: left;
}

.lesser-text-on-image {
    position: absolute;
    top: 50%;
    left: 50%;
    text-align: right;
}

.image-header {
    font-size: 40px;
    color: white;
    text-align: center;
}

.subtext {
    font-size: 25px;
    word-wrap: normal;
    font-style: italic;
    color: white;
    text-align: center;
}

.lesser-subtext {
    font-size: 15px;
    word-wrap: normal;
    color: white;
    text-align: center;
}

.lesser-image-header {
    font-size: 25px;
    word-wrap: normal;
    text-align: center;
    color: white;
}

.article-header {
    font-size: 35px;
    text-align: justify;
    font-weight: bold;
    color: black;
}

.article-body {
    font-size: 14px;
    text-align: justify;
    color: black;
}

.text-centered {
    text-align: center;
}

.bump-down {
    margin-top: 10%;
}

.pre-roll-type {
    min-width: 100%;
    max-width: 100vw;
    max-height: 100vh;
}

.emphasis {
    font-weight: bolder;
}

.z-index-1 {
    z-index: 1;
}

.appear-after-click {
    display: none;
}

.font-20px {
    font-size: 20px;
}

.font-18px {
    font-size: 18px;
}

.font-18px {
    font-size: 18px;
}

.inline-flex {
    display: inline-flex !important;
}

.constrained-width-button {
    width: 11rem;
}

.transparent-bg {
    background-color: none;
}

.light-gray-bg {
    background: #FBFAFA;
}

.mobilehomebutton, .mobilehomebutton:visited {
    border-radius: 0px;
    border: 1px solid black;
    color: black;
    margin: 2px 2px 2px 2px;
    padding: 3px 3px 3px 3px;
    text-decoration: none;
}

.gl-input-field, .gl-input-field-mobile {
    border-radius: 2px;
    font-family: "open sans", helvetica, sans-serif;
    border: 1px solid #ababab;
}

.gl-input-field {
    width: 32%;
    max-width: 200px;
    padding-top: 0.5rem;
    padding-left: 0px;
    padding-bottom: 0.5rem;
    padding-right: 0px;
    font-size: 0.75rem;
    margin-bottom: 3.5rem;
}

.gl-input-field-mobile {
    width: 100%;
    padding-top: 7px;
    padding-bottom: 7px;
    margin-top: 5px;
    margin-bottom: 5px;
}

